CreativeAgency/css/servicesStyles.css
body {
  overflow-x: hidden;
}

/* Services section */
.servicesSection {
  padding: 120px 100px;
  padding-bottom: 0;
}

.services {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 30px;
}

/* Cards for each service */
.card {
  text-align: center;
  padding: 15px 10px;
  border-radius: 4px;
  transition: all 250ms ease-in-out;
  max-width: 350px;
}

.card > img {
  width: 30%;
  margin-bottom: 15px;
}

.cardParagraph {
  margin: 0;
  font-size: 15px;
}

.card:hover {
  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
  transition: all 250ms ease-in-out;
}

/* Media queries for smaller devices */
@media (max-width: 1068px) {
  .servicesSection {
    padding: 100px 20px;
  }

  .services {
    grid-template-columns: repeat(2, 1fr);
  }

  .card {
    margin: 10px auto;
    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
  }
}

@media (max-width: 630px) {
  .services {
    grid-template-columns: 1fr;
  }
  .card {
    margin: 25px auto;
    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
  }
}

